syntax = "proto3";

package com.mshernandez.coinaccount.grpc;

option java_outer_classname = "AccountInfoProtos";

import "coinaccount_service.proto";

/**
 * Provides information about accounts.
 */
service AccountInfoService
{
    // Get information about the balances owned by an account.
    rpc GetBalanceInfo(GetBalanceInfoRequest) returns (GetBalanceInfoResponse) {}

    // Get a deposit address for an account.
    rpc GetDepositAddress(GetDepositAddressRequest) returns (GetDepositAddressResponse) {}

    // Get a return address for an account.
    rpc GetReturnAddress(GetReturnAddressRequest) returns (GetReturnAddressResponse) {}

    // Set a return address for an account.
    rpc SetReturnAddress(SetReturnAddressRequest) returns (SetReturnAddressResponse) {}
}

/**
 * Possible deposit address types to request.
 */
 enum AddressType
 {
     DEFAULT = 0;
     BECH32 = 1;
     P2SH_SEGWIT = 2;
     LEGACY = 3;
 }

/**
 * Request parameters for GetBalanceInfo()
 */
message GetBalanceInfoRequest
{
    AccountIdentifier account = 1;
}

/**
 * Response object given by GetBalanceInfo()
 *
 * Details the balances held by an account.
 */
message GetBalanceInfoResponse
{
    ResponseType response_type = 1;
    uint64 confirmed_balance = 2; // The Total Confirmed Account Balance
    uint64 withdrawable_balance = 3; // How Much May Be Withdrawn At This Time
    uint64 unconfirmed_balance = 4; // Unusable Balances Pending Confirmation
}

/**
 * Request parameters for GetDepositAddress()
 */
message GetDepositAddressRequest
{
    AccountIdentifier account = 1; // The account.
    AddressType address_type = 2; // The type of address to request, optional.
}

/**
 * Response object given by GetDepositAddress()
 */
message GetDepositAddressResponse
{
    ResponseType response_type = 1;
    string deposit_address = 2;
}

/**
 * Request parameters for GetReturnAddress()
 */
message GetReturnAddressRequest
{
    AccountIdentifier account = 1;
}

/**
 * Response object given by GetReturnAddress()
 */
message GetReturnAddressResponse
{
    ResponseType response_type = 1;
    string return_address = 2;
}

/**
 * Request parameters for SetReturnAddress()
 */
message SetReturnAddressRequest
{
    AccountIdentifier account = 1;
    string return_address = 2;
}

/**
 * Response object given by SetReturnAddress()
 */
message SetReturnAddressResponse
{
    ResponseType response_type = 1;
}